Prevent background from jumping around underneath modal.

--- a/core/modules/system/css/system.css
+++ b/core/modules/system/css/system.css
@@ -3,6 +3,13 @@
  * Generic theme-independent base styles.
  */
 
+ /**
+ * Prevent background from jumping underneath modal.
+ */
+html.dialog-open {
+  position: inherit;
+}
+
 /**
  * Autocomplete.
  *
